# deepcortex

./: .gitignore  CMakeLists.txt  LICENSE.txt
include/: mat.h
src/: mat.cpp
tests/: CMakeLists.txt  mat_test.cpp
